All levels added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,35 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="#0A84FA"
+    android:background="@drawable/mainbg"
     >
 
     <TextView
         android:id="@+id/textViewMainTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Animals"
-        android:textColor="@color/white"
-        android:textSize="35dp"
+        android:fontFamily="@font/finger_paint"
+        android:text="@string/animals"
+        android:textColor="@color/black"
+        android:textSize="@dimen/app_title"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.202" />
+        app:layout_constraintVertical_bias="0.243" />
 
-    <Button
+    <android.widget.Button
         android:id="@+id/buttonMainPlay"
+        android:layout_width="87dp"
+        android:layout_height="81dp"
+        android:layout_marginTop="56dp"
+        android:background="@drawable/custom_play_button"
+        android:text="@string/play"
+        android:textSize="@dimen/text_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textViewMainTitle" />
+
+    <TextView
+        android:id="@+id/textViewBestScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="play"
-        app:layout_constraintTop_toBottomOf="@id/textViewMainTitle"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="72dp"
+        android:textColor="@color/black"
+        android:textSize="@dimen/text_size"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="75dp"/>
+        app:layout_constraintHorizontal_bias="0.428"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonMainPlay" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
